--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,6 @@ form button {
   background-color: rgb(56, 56, 143);
 }
 
-
 input {
   line-height: 1.5;
   width: 100%;
@@ -99,7 +98,6 @@ button:disabled {
   cursor: not-allowed;
 }
 
-
 .sign-in {
   color: #282c34;
   background: white;
@@ -107,10 +105,17 @@ button:disabled {
   margin: 0 auto;
 }
 
+.modal-warning {
+  /* margin: 1rem auto; */
+  /* background-color: #fff; */
+  /* color: #6649b8; */
+  /* padding: 1rem; */
 
+  /* display: inline-block; */
+}
 
-
-ul, li {
+ul,
+li {
   text-align: left;
   list-style: none;
 }
@@ -130,7 +135,6 @@ p {
   display: flex;
   align-items: center;
 }
-
 
 .sent {
   flex-direction: row-reverse;
@@ -152,4 +156,3 @@ img {
   border-radius: 50%;
   margin: 2px 5px;
 }
-
